# new_talkcode

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  browser-control-test.html  bunfig.toml  cargo-tree.txt  fly.toml  index.html  package.json  playwright.config.ts  pre-commit.sh  private.key  talkcody-local-coding-agent-followup-plan.md  talkcody_1.0_todo.md  vite.config.ts  测试文件.html  浏览器计划.md  走迷宫.html
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/.llm-fixtures/: MiniMax__Claude__MiniMax-M2.1__custom.json  MiniMax__Claude__MiniMax-M2.5__custom.json  aiGateway__OpenAiCompatible__google_gemini-3-flash__custom.json  aiGateway__OpenAiCompatible__xai_grok-4.1-fast-reasoning__custom.json  alibaba__OpenAiCompatible__MiniMax-M2.5__custom.json  alibaba__OpenAiCompatible__glm-5__custom.json  alibaba__OpenAiCompatible__kimi-k2.5__custom.json  alibaba__OpenAiCompatible__qwen3.5-plus__custom.json  anthropic-minimax-test-894132__Claude__MiniMax-M2__custom.json  anthropic-user-test-831716__OpenAiCompatible__gpt-5.1-codex-mini__custom.json  google__OpenAiCompatible__gemini-2.5-flash-lite__custom.json  kimi_coding__OpenAiCompatible__kimi-k2.5__custom.json  moonshot__OpenAiCompatible__kimi-k2.5__custom.json  openRouter__OpenAiCompatible__openrouter_pony-alpha__custom.json  openai-compatible-longcat2-433957__OpenAiCompatible__LongCat-Flash-Chat__custom.json  openai-compatible-openrouter-test-510556__OpenAiCompatible__xiaomi_mimo-v2-flash__custom.json  openai__OpenAiCompatible__gpt-5-mini__oauth.json  openai__OpenAiCompatible__gpt-5.4__custom.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: analytics.rs  background_tasks.rs  code_navigation.rs  constants.rs  database.rs  device_id.rs  directory_tree.rs  feishu_gateway.rs  file_search.rs  glob.rs  http_proxy.rs  lib.rs  lint.rs  list_files.rs  lsp.rs  oauth_callback_server.rs  script_executor.rs  search.rs  shell_utils.rs  telegram_gateway.rs  terminal.rs  walker.rs  websocket.rs
src-tauri/core/src/core/: agent_loop.rs  mod.rs  runtime.rs  tool_definitions.rs  tool_dependency_analyzer.rs  tool_name_normalizer.rs  tools.rs
src-tauri/core/src/core/completion_hooks/: mod.rs  ralph_loop.rs  stop_hook.rs
src-tauri/core/src/git/: diff.rs  mod.rs  repository.rs  status.rs  types.rs  worktree.rs
src-tauri/core/src/integrations/: feishu.rs  mod.rs  telegram.rs  types.rs
src-tauri/core/src/integrations/remote/: media.rs  session.rs  text_utils.rs  types.rs
src-tauri/core/src/llm/: commands.rs  mod.rs  types.rs
src-tauri/core/src/llm/ai_services/: completion_service.rs  context_compaction_service.rs  git_message_service.rs  mod.rs  model_resolver.rs  pricing_service.rs  prompt_enhancement_service.rs  stream_collector.rs  stream_runner.rs  task_title_service.rs  types.rs
src-tauri/core/src/llm/auth/: api_key_manager.rs  mod.rs  oauth.rs  openai_usage.rs
src-tauri/core/src/llm/image_generation/: aigateway.rs  dashscope.rs  google.rs  mod.rs  openai.rs  service.rs  tests.rs  types.rs  volcengine.rs  zhipu.rs
src-tauri/core/src/llm/models/: mod.rs  model_registry.rs  model_sync.rs
src-tauri/core/src/llm/protocols/: claude_protocol.rs  header_builder.rs  mod.rs  openai_protocol.rs  openai_responses_protocol.rs  request_builder.rs  stream_parser.rs
src-tauri/core/src/llm/providers/: default_provider.rs  github_copilot_provider.rs  kimi_coding_provider.rs  mod.rs  moonshot_provider.rs  openai_provider.rs  provider.rs  provider_configs.rs  provider_registry.rs
src-tauri/core/src/llm/streaming/: mod.rs  stream_handler.rs
src-tauri/core/src/llm/testing/: fixtures.rs  mock_server.rs  mod.rs  perf_tests.rs  recorder.rs  request_params_tests.rs  tests.rs
src-tauri/core/src/llm/testing/recordings/: MiniMax__anthropic__MiniMax-M2.1__api.json  aiGateway__OpenAiCompatible__google_gemini-2.5-flash-lite__custom.json  zhipu__OpenAiCompatible__glm-4.7__custom.json
src-tauri/core/src/llm/tracing/: ids.rs  mod.rs  schema.rs  types.rs  writer.rs
src-tauri/core/src/llm/transcription/: google.rs  groq.rs  mod.rs  openai.rs  openrouter.rs  service.rs  types.rs
src-tauri/core/src/platform/: fs.rs  git.rs  lsp.rs  mod.rs  shell.rs  types.rs
src-tauri/core/src/scheduler/: cron_utils.rs  mod.rs  repository.rs  types.rs
src-tauri/core/src/security/: mod.rs
src-tauri/core/src/storage/: agents.rs  attachments.rs  chat_history.rs  mod.rs  models.rs  settings.rs
src-tauri/core/src/storage/migrations/: mod.rs  talkcody_db.rs
src-tauri/core/src/streaming/: buffer.rs  events.rs  mod.rs  throttle.rs
src-tauri/core/src/tools/: ask_user_questions.rs  bash_tool.rs  call_agent.rs  code_search.rs  edit_file.rs  exit_plan_mode.rs  github_pr.rs  glob_tool.rs  image_generation.rs  install_skill.rs  list_files.rs  mod.rs  read_file.rs  todo_write.rs  web_fetch.rs  web_search.rs  write_file.rs
src-tauri/core/src/types/: agent_loop.rs  mod.rs  runtime.rs  session.rs  tool_definitions.rs  tool_dependency_analyzer.rs  tool_name_normalizer.rs  tools.rs  types.rs
src-tauri/core/src/types/completion_hooks/: auto_review.rs  mod.rs  ralph_loop.rs
src-tauri/desktop/: Cargo.toml  build.rs
src-tauri/desktop/src/: browser_control.rs  dock_menu.rs  file_watcher.rs  keep_awake.rs  lib.rs  llm_commands.rs  main.rs  tray.rs  window_manager.rs
src-tauri/desktop/src/scheduled_tasks/: mod.rs  runner.rs
src-tauri/desktop/src/scheduled_tasks/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/server/: Cargo.toml
src-tauri/server/src/: config.rs  lib.rs  main.rs  state.rs  streaming_bridge.rs  types.rs
src-tauri/server/src/routes/: actions.rs  chat.rs  files.rs  messages.rs  mod.rs  sessions.rs  tasks.rs  ws.rs
src-tauri/server/src/telegram/: bot.rs  client.rs  mod.rs
src-tauri/test/api/: playwright.config.ts
src-tauri/test/api/helpers/: api-client.ts  env.ts  fixtures.ts  index.ts  session.ts  sse.ts
src-tauri/test/api/tests/: chat.spec.ts  files.spec.ts  health.spec.ts  messages.spec.ts  sessions.spec.ts  tasks.spec.ts
(+1128 files in other folders)
