[workspace]
members = ["core", "server", "desktop"]
resolver = "2"

[package]
name = "talkcody"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TalkCody Desktop Application (Tauri)"
license = "MIT"
default-run = "talkcody"

[[bin]]
name = "talkcody"
path = "desktop/src/main.rs"

[dependencies]
talkcody_desktop_lib = { package = "talkcody-desktop", path = "desktop" }
talkcody_core = { package = "talkcody-core", path = "core" }
talkcody_server = { package = "talkcody-server", path = "server" }
fix-path-env.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-clipboard.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-log.workspace = true

# API service (bin)
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true

[build-dependencies]
tauri-build.workspace = true

[workspace.package]
version = "0.1.10"
edition = "2021"
authors = ["Kaisen Kang"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web/HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "blocking" ] }
url = "2.5"
bytes = "1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Database
libsql = "0.9.29"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
chrono-tz = { version = "0.9", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
base64 = "0.22"
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
which = "7.0"
once_cell = "1"
thiserror = "1"
anyhow = "1"

# Git
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Search
grep = "0.3"
ignore = "0.4"
rayon = "1"

# Archive
tar = "0.4"
flate2 = "1"
zip = "2"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"

# Tauri (desktop only)
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-build = { version = "2" }
tauri-plugin-opener = "2.5"
tauri-plugin-log = "2.8"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard = "2.1"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }
tauri-plugin-updater = "2.10"

# Feishu
open-lark = { git = "https://github.com/talkcody/open-lark", branch = "fix-user-id-null", features = ["websocket"] }

# Other
notify = "6.1"
lazy_static = "1.5"
tiny_http = "0.12"
portable-pty = "0.9"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# Testing
tempfile = "3"
tokio-test = "0.4"
