[package]
name = "talkcody-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TalkCody core library - shared between desktop and server"
license = "MIT"

[lib]
name = "talkcody_core"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
async-stream.workspace = true

serde.workspace = true
serde_json.workspace = true
http = "1"

reqwest.workspace = true
url.workspace = true
bytes.workspace = true

libsql.workspace = true

log.workspace = true
tracing.workspace = true

tauri.workspace = true

uuid.workspace = true
chrono.workspace = true
cron.workspace = true
chrono-tz.workspace = true
regex.workspace = true
dirs.workspace = true
base64.workspace = true
lru.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
which.workspace = true
once_cell.workspace = true
thiserror.workspace = true
anyhow.workspace = true

git2.workspace = true

grep.workspace = true
ignore.workspace = true
rayon.workspace = true

tar.workspace = true
flate2.workspace = true
zip.workspace = true

tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true
tree-sitter-typescript.workspace = true
streaming-iterator.workspace = true

open-lark.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true


lazy_static.workspace = true
tiny_http.workspace = true
portable-pty.workspace = true
fix-path-env.workspace = true

# Additional dependencies
serde_urlencoded = "0.7"
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5"
indexmap = "2"
walkdir = "2"
infer = "0.16"
mime = "0.3"
mime_guess = "2"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tauri = { workspace = true, features = ["test"] }
